# clover4

./: CHANGELOG  Makefile.in  README.md  all_build.sh  configure  configure.in  debug_build.sh  home_build.sh  update_clover.sh
code/: HelloWorld.cl
src/: class_system.c  compiler.c  get_type.c  interpreter.c  main.c  vm.c
